--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-file:///Users/felixmolina/Downloads/malla-periodismo-uah-final/index.html
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Malla Periodismo UAH 2018</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Malla Interactiva · Periodismo UAH 2018</h1>
+        <p>Creado por Félix Molina</p>
+    </header>
+
+    <main id="malla"></main>
+
+    <footer>
+        <p>Haz clic en cada ramo para marcarlo como cursado.</p>
+        <p>© 2025 Félix Molina – Universidad Alberto Hurtado</p>
+    </footer>
+
+    <script src="data.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
